# d3d12-api

./: Cargo.toml  README.md
crates/d3d12-api/: Cargo.toml
crates/d3d12-api-core/: Cargo.toml  build.rs
crates/d3d12-api-core/src/: lib.rs
crates/d3d12-api-core/src/aliases/: mod.rs
crates/d3d12-api-core/src/aliases/win32/: mod.rs
crates/d3d12-api-core/src/aliases/win32/foundation/: mod.rs
crates/d3d12-api-core/src/aliases/win32/graphics/: mod.rs
crates/d3d12-api-core/src/aliases/win32/graphics/direct2d/: mod.rs
crates/d3d12-api-core/src/aliases/win32/graphics/direct3d/: mod.rs
crates/d3d12-api-core/src/aliases/win32/graphics/direct3d12/: mod.rs
crates/d3d12-api-core/src/aliases/win32/graphics/direct_write/: mod.rs
crates/d3d12-api-core/src/aliases/win32/security/: mod.rs
crates/d3d12-api-core/src/aliases/win32/storage/: mod.rs
crates/d3d12-api-core/src/aliases/win32/system/: mod.rs
crates/d3d12-api-core/src/aliases/win32/ui/: mod.rs
crates/d3d12-api-core/src/core/: mod.rs
crates/d3d12-api-core/src/core/win32/: enums.rs  mod.rs
crates/d3d12-api-core/src/core/win32/foundation/: _hresult.rs  _mod.rs  apis.rs  constants.rs  enums.rs  mod.rs  structs.rs
crates/d3d12-api-core/src/core/win32/graphics/: constants.rs  mod.rs  structs.rs
crates/d3d12-api-core/src/core/win32/security/: constants.rs  mod.rs  structs.rs
crates/d3d12-api-core/src/core/win32/storage/: apis.rs  mod.rs
crates/d3d12-api-core/src/core/win32/system/: mod.rs
crates/d3d12-api-core/src/core/win32/ui/: constants.rs  enums.rs  mod.rs
crates/d3d12-api-core/src/extensions/win32/graphics/: mod.rs
crates/d3d12-api-core/src/helpers/: mod.rs
crates/d3d12-api/src/: lib.rs
crates/d3d12-api/src/utils/: hlsl.rs  mod.rs  state_object_desc.rs
crates/hlsl-macro/: Cargo.toml
crates/hlsl-macro/src/: lib.rs
crates/root-sig-macro/: Cargo.toml
crates/root-sig-macro/src/: lib.rs
examples/hello-triangle/: Cargo.toml  build.rs
examples/hello-triangle/shaders/: hello-triangle-ps.dxil  hello-triangle-vs.dxil
examples/hello-triangle/src/: main.rs
(+439 files in other folders)
