[package]
name = "d3d12-api"
version = "0.2.0"
edition = "2021"

license = "MIT/Apache-2.0"
description = "D3D12 bindings and helpers"
# homepage = ""
# documentation = ""
# repository = ""
# readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
d3d12-api-core = { path = "../d3d12-api-core", version = "0.2.0" }
root-sig-macro = { path = "../root-sig-macro", version = "0.1.1" }