[package]
name = "root-sig-macro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
d3d12-api-core = { path = "../d3d12-api-core" }
quote = "1"
proc-macro2 = "1.0"
syn = "1.0"
