[package]
name = "hello-triangle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
d3d12-api = { path = "../../crates/d3d12-api" }
array-init = "2.0.0"

[build-dependencies]
d3d12-api = { path = "../../crates/d3d12-api" }